--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -775,7 +775,7 @@
             <p></p>
             <a process-indicator="PI:AddToFavorite" ng-click="addToFavorite()" class="button yellow full-width uppercase btn-small">Add to Favourites</a>
             <p></p>
-            <a process-indicator="PI:AddToFavorite" ng-click="addToFavorite()" class="button yellow full-width uppercase btn-small">Send Inquiry</a>
+            <a ui-sref="main.sellerAccount.inquiries.new({id:mdl.equi.id})" class="button yellow full-width uppercase btn-small">Send Inquiry</a>
 
         </div>
     </article>
