--- a/src/app/views/account/invoices/view/view.html
+++ b/src/app/views/account/invoices/view/view.html
@@ -74,6 +74,7 @@
         </div>
     </div>
     <button class="button green btn-large uppercase pull-left" ui-sref="main.account.invoices.list">Back to Invoice List</button>
+    <button class="button green btn-large uppercase pull-right">Approve Invoice</button>
     <button class="button green btn-large uppercase pull-right">Download PDF</button>
     <button style="margin-right:4px;" class="button green btn-large uppercase pull-right dark-blue2"  process-indicator ng-click="invoicesMdl.pay(mdl.invoice)">Pay</button>
 </div>
