--- a/src/app/views/account/equipments/add/add.html
+++ b/src/app/views/account/equipments/add/add.html
@@ -34,24 +34,33 @@
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
                     <div>
-                        <label>Daily Price</label>
-                        <input type="text" name="dailyprice" ng-model="addEquiMdl.data.daily_price" required class="input-text full-width" placeholder="Daily Rent Price">
+                        <label>Hourly Price</label>
+                        <input type="text" name="hourlyprice" ng-model="addEquiMdl.data.hourly_price" required class="input-text full-width" placeholder="Daily Rent Price">
                     </div>
                 </div>
                 <div class="col-sms-6 col-sm-6">
                     <div>
-                        <label>Weekly Price</label>
-                        <input type="text" name="weeklyprice" ng-model="addEquiMdl.data.weekly_price" class="input-text full-width" placeholder="Weekly Rent Price">
+                        <label>Daily Price</label>
+                        <input type="text" name="dailyprice" ng-model="addEquiMdl.data.daily_price" required class="input-text full-width" placeholder="Daily Rent Price">
                     </div>
                 </div>
             </div>
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
                     <div>
+                        <label>Weekly Price</label>
+                        <input type="text" name="weeklyprice" ng-model="addEquiMdl.data.weekly_price" class="input-text full-width" placeholder="Weekly Rent Price">
+                    </div>
+                </div>
+
+                <div class="col-sms-6 col-sm-6">
+                    <div>
                         <label>Monthly Price</label>
                         <input type="text" name="monthlyprice" ng-model="addEquiMdl.data.monthly_price" required class="input-text full-width" placeholder="Monthly Rent Price ">
                     </div>
                 </div>
+            </div>
+            <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
                     <div>
                         <label>Selling Price</label>
@@ -83,7 +92,9 @@
                 </div>
             </div>
 
-            <hr>
+            <br/>
+            <br/>
+            <hr/>
 
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
