--- a/src/app/views/account/orders/view/view.html
+++ b/src/app/views/account/orders/view/view.html
@@ -48,7 +48,7 @@
     </div>
     <div class="intro2 small-box border-box table-wrapper hidden-table-sms cart-total">
         <div class="description">
-            <h4>Cart Total</h4>
+            <h4>Order Total</h4>
         </div>
 
         <br />
