--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -139,3 +139,7 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
   outline: none;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
+
+.ng-pristine.ng-invalid-required {
+  box-shadow: none !important;
+}
