--- a/src/app/views/seller-account/orders/process/process.html
+++ b/src/app/views/seller-account/orders/process/process.html
@@ -34,24 +34,48 @@
     </li>
 </ul>
 <h3><label>Current Status:</label><span>{{mdl.item.current_status}}</span></h3>
-<form ng-show="mdl.item.current_status!='cancelled'">
-    <div class="row form-group" style="margin-top: 40px;">
-        <div class="col-sms-6 col-sm-6">
-            <label>Change Order Status</label>
-            <div class="selector">
-                <select name="select-product" ng-model="mdl.changedStatus" class="full-width" ng-options="opt as opt.text for opt in mdl.statusOptions">
-                </select>
+<div class="row">
+    <div class="col-md-6">
+
+        <form ng-show="mdl.item.current_status!='cancelled'">
+            <div class="row form-group" style="margin-top: 40px;">
+                <div class="col-sms-6 col-sm-6">
+                    <label>Change Order Status</label>
+                    <div class="selector">
+                        <select name="select-product" ng-model="mdl.changedStatus" class="full-width" ng-options="opt as opt.text for opt in mdl.statusOptions">
+                        </select>
+                    </div>
+                </div>
             </div>
-        </div>
+            <br/>
+            <div class="row form-group" style="margin-top: 40px;">
+                <div class="col-sms-6 col-sm-6">
+                    <textarea rows="10" cols="53" ng-model="mdl.comment" placeholder="Update user with your message here"></textarea>
+                </div>
+            </div>
+
+            <button ng-click="mdl.update()">Update Status</button>
+        </form>
     </div>
-    <br/>
-    <div class="row form-group" style="margin-top: 40px;">
-        <div class="col-sms-6 col-sm-6">
-            <textarea rows="10" cols="53" ng-model="mdl.comment" placeholder="Update user with your message here"></textarea>
+    <div class="col-md-6" ng-show="mdl.item.current_status=='confirmed'" style="border: 1px solid #EEE">
+        <h1>Assign Inventory</h1>
+        <div ng-repeat="item in mdl.inventories">
+              <div class="row">
+                  <div class="col-sm-1">
+                      <input type="checkbox" ng-model="itm.selected">
+                  </div>
+                  <div class="col-sm-11">
+                      <label>ID:{{item.id}}</label>
+                      <div>{{item.product.name+' '+item.serial_no}}</div>
+                  </div>
+              </div>
+        </div>
+        <div ng-show="mdl.inventories.length==0">
+                <h2>Not inventory available</h2>
         </div>
     </div>
 
-    <button ng-click="mdl.update()">Update Status</button>
-</form>
+</div>
+
 <!--<button ui-sref="main.sellerAccount.orders.process">Process</button>
 <button ui-sref="main.sellerAccount.orders.list">list</button>-->
