Trail commit on new branch

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -143,3 +143,5 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
 .ng-pristine.ng-invalid-required {
   box-shadow: none !important;
 }
+
+/*hiren test*/
